AltusGroup/Project Docs/IaC/4. network/vnet-prod.json
{
	"$schema":"https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
	"contentVersion":"1.0.0.0",
	"parameters":{},
	"variables":{
		"vnetName":"vnet-prod",
		"vnetAddress":"10.3.0.0/16",
		"dnsServers":["10.1.0.160","10.3.4.4","10.3.4.5"]
	},
	"resources":[
		{
            "name": "nsg-snet-aag-prod",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowFrom30vendors",
                        "properties": {
                            "description": "Allow TCP:30002,30003,30004,30006,40002,40003,40004,40006 from 30 vendors",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "",
                            "sourceAddressPrefix": "",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": ["30002","30003","30004","30006","40002","40003","40004","40006"],
                            "sourceAddressPrefixes": ["198.208.0.0/16","207.107.118.46","207.107.118.47","207.107.65.32/28","207.107.114.216/29","52.60.42.225","52.60.189.187","52.60.123.149","35.182.59.182","216.171.227.224/27"],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAagPorts",
                        "properties": {
                            "description": "Allow TCP:65200-65535",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "65200-65535",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },                    
                    {
                        "name": "DenyAllInboundFromInternet",
                        "properties": {
                            "description": "Deny All other inbound traffic from Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 200,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
		{
            "name": "nsg-snet-int-prod",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "properties": {
              "securityRules": [
                    {
                        "name": "AllowOutToThreeServers",
                        "properties": {
                            "description": "Allow Any outbound to domain controller, SQL server, Azure KMS server",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": ["10.3.4.4","10.3.4.5","30.3.3.4","23.102.135.246","10.1.0.160"]
                        }
                    },
                    {
                        "name": "AllowOutToHubCleo",
                        "properties": {
                            "description": "Allow outbound to Hub Cleo",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "216.171.227.106",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": ["9950","10000-12000","80","443"],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowOutToAWS",
                        "properties": {
                            "description": "Allow outbound to AWS",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": ["1.2.3.4","4.5.6.7"]
                            // WAS PIP must be entered in the line above in "destinationAddressPrefixes"
                        }
                    },                    
                    {
                        "name": "DenyOutbound",
                        "properties": {
                            "description": "Deny All other outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",

//                          "access": "Deny" was replaced with                             
//                          "access": "Allow" to resolve "failed to join AD domain" issue.
//                          "access": "Deny" should be re-instated as part of Network hardening project

                            "access": "Allow",
                            "priority": 400,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]   
            }
        },
		{
            "name": "nsg-snet-sql-prod",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "properties": {}
        },
		{
            "name": "nsg-snet-dc-prod",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "properties": {}
        },
		{
            "name": "nsg-snet-pool-a-prod",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "properties": {}
        },		
		{
            "name": "nsg-snet-pool-b-prod",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "properties": {}
        },	
		{
            "name": "nsg-snet-master-vms-prod",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "properties": {}
        },									
		{
			"type":"Microsoft.Network/virtualNetworks",
			"apiVersion":"2019-09-01",
			"name":"[variables('vnetName')]",
			"location":"[resourceGroup().location]",
            "dependsOn": [ "nsg-snet-aag-prod","nsg-snet-int-prod","nsg-snet-sql-prod","nsg-snet-dc-prod","nsg-snet-pool-a-prod","nsg-snet-pool-b-prod","nsg-snet-master-vms-prod" ],
			"properties":{
				"addressSpace":{ "addressPrefixes":[ "[variables('vnetAddress')]" ] },
				"dhcpOptions":{ "dnsServers":"[variables('dnsServers')]" },
				"virtualNetworkPeerings":[],
				"enableDdosProtection":false,
				"enableVmProtection":false,
				"subnets": [
					{ "name":"GatewaySubnet","properties":{"addressPrefix":"10.3.0.0/24" } },
					{ "name":"snet-aag-prod","properties":{"addressPrefix":"10.3.1.0/24", "networkSecurityGroup": {"id": "[resourceId('Microsoft.Network/networkSecurityGroups/','nsg-snet-aag-prod')]"} } },
					{ "name":"snet-int-prod","properties":{"addressPrefix":"10.3.2.0/24", "networkSecurityGroup": {"id": "[resourceId('Microsoft.Network/networkSecurityGroups/','nsg-snet-int-prod')]"} } },
					{ "name":"snet-sql-prod","properties":{"addressPrefix":"10.3.3.0/24", "networkSecurityGroup": {"id": "[resourceId('Microsoft.Network/networkSecurityGroups/','nsg-snet-sql-prod')]"} } },
					{ "name":"snet-dc-prod","properties":{"addressPrefix":"10.3.4.0/24", "networkSecurityGroup": {"id": "[resourceId('Microsoft.Network/networkSecurityGroups/','nsg-snet-dc-prod')]"} } },
					{ "name":"snet-pool-a-prod","properties":{"addressPrefix":"10.3.5.0/24", "networkSecurityGroup": {"id": "[resourceId('Microsoft.Network/networkSecurityGroups/','nsg-snet-pool-a-prod')]"} } },
					{ "name":"snet-pool-b-prod","properties":{"addressPrefix":"10.3.6.0/24", "networkSecurityGroup": {"id": "[resourceId('Microsoft.Network/networkSecurityGroups/','nsg-snet-pool-b-prod')]"} } },
					{ "name":"snet-master-vms-prod","properties":{"addressPrefix":"10.3.7.0/24", "networkSecurityGroup": {"id": "[resourceId('Microsoft.Network/networkSecurityGroups/','nsg-snet-master-vms-prod')]"} } }

				]
			}
		}		
	]
}
